Add links to Github and Linkedin

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,14 @@ body {
   background-color: whitesmoke
 }
 
+a {
+  color: inherit;
+}
+
+i {
+  font-size: 50px;
+}
+
 /* Layout */
 footer {
   padding: 100px 10px;
