--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,12 @@
 
 /* Global styles */
 body {
-  background-color: whitesmoke
+  background-color: whitesmoke;
+  position: relative;
 }
 
 a {
   color: inherit;
-}
-
-i {
-  font-size: 50px;
 }
 
 /* Layout */
@@ -19,27 +16,20 @@ footer {
   background-color: darkslateblue; 
 }
 
-#head {
+#header {
   height: calc(100vh - 56px);
   min-height: 150px;
 }
 
-#skills {
-  width: 50%;
-  margin: 100px auto;
-  padding: 25px 5px;
-  text-align: center;
-  background-color: white;
-  border: solid 2px white;
-  border-radius: 25px;
+.pt-5 {
+  padding-top: 100px !important;
 }
 
-#projects {
-  width: 50%;
-  margin: 100px auto;
-  padding: 25px 5px;
-  text-align: center;
-  background-color: white;
-  border: solid 2px white;
-  border-radius: 25px;
+/* Icons */
+#home {
+  font-size: 20px;
+}
+
+#social-icon {
+  font-size: 50px;
 }
